# GooglePhotoUploader-WithFaceFilter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
models/: README.md
src/child_photo_upload_job/: main.py  orchestrator.py
src/child_photo_upload_job/face_recognition/: __init__.py  detector.py  identity.py  organize.py  pipeline.py  run_face_recognition.py
src/child_photo_upload_job/google_photos/: __init__.py  auth.py  client.py  media.py  run_google_photos.py  state.py  uploader.py
tests/: test_google_photos.py  test_main.py  test_orchestrator.py
