[project]
name = "child-photo-upload-job"
version = "0.1.0"
description = "Child photo upload job"
requires-python = ">=3.11"
dependencies = [
    "insightface>=0.7.3",
    "onnxruntime>=1.17",
    "opencv-python>=4.9",
    "pillow>=10.0",
    "pillow-heif>=0.16",
    "numpy>=1.26",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "requests>=2.31",
]

[project.scripts]
child-photo-upload-job = "child_photo_upload_job.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
